Bug 1661272: Only adjust default font sizes for buttons, lists and fields when non-native theming is enabled. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D91194